Project

General

Profile

Bug #43255

rgw: bucket modification time inconsistency between zones

Added by Yehuda Sadeh over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Trying to create an already existing bucket updates its creation time on the zone where the operation is performed.

History

#1 Updated by Yehuda Sadeh over 4 years ago

  • Subject changed from rgw: bucket creation time inconsistency between zones to rgw: bucket modification time inconsistency between zones

#2 Updated by Yehuda Sadeh over 4 years ago

  • Pull request ID set to 32180

#3 Updated by Casey Bodley over 4 years ago

  • Status changed from New to Fix Under Review

#4 Updated by Daniel Gryniewicz about 4 years ago

  • Status changed from Fix Under Review to Resolved

Also available in: Atom PDF