rgw: use bucket creation time from bucket instance info

Fixes: https://tracker.ceph.com/issues/43255

 - when linking bucket, use creation time from bucket instance info
 - creating an already existing bucket, keep the original bucket instance info

Signed-off-by: Yehuda Sadeh <yehuda@redhat.com>